--- a/001_LMS_fundamental_SO3/0826_4-개발자를_위한_첫_번째_필수교양.ipynb
+++ b/001_LMS_fundamental_SO3/0826_4-개발자를_위한_첫_번째_필수교양.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "645190c4",
+   "id": "2cdef67b",
    "metadata": {},
    "source": [
     "아이펠 1주차 금요일(0826)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a98ec30",
+   "id": "ca4508b7",
    "metadata": {},
    "source": [
     "# 4. 개발자를 위한 첫번째 필수 교양"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2783ea7",
+   "id": "f81a0121",
    "metadata": {},
    "source": [
     "## 4.1. 학습 목표 및 목차"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f603f1",
+   "id": "05e7d5c4",
    "metadata": {},
    "source": [
     "![toc](https://i.imgur.com/Z8Bah3w.png)"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd255f7",
+   "id": "bf5d9f32",
    "metadata": {},
    "source": [
     "이 markdown 문서의 본문에는 교재에 있는 명령어들을 하나씩 다시 적어볼 것이다.\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "921a76ed",
+   "id": "3da1f8d3",
    "metadata": {},
    "source": [
     "## 4.2. 개발자를 위한 첫번째 필수 교양 (1) : 협업을 더 잘, 더 편리하게 하기 위해\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f81e5c",
+   "id": "b8b0b35b",
    "metadata": {},
    "source": [
     "## 4.3. 개발자를 위한 첫번째 필수 교양 (2) : 개발자의 가드닝, 잔디 심기"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebb93f52",
+   "id": "e6a22b9a",
    "metadata": {},
    "source": [
     " - 1일 1 커밋하기 운동\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c689fa09",
+   "id": "f196fd6f",
    "metadata": {},
    "source": [
     "## 4.4. 내 코드의 모든 발자취를 기록할 수 있을까? (1) 버전관리와 Git"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d68d58a",
+   "id": "78eda1a4",
    "metadata": {},
    "source": [
     " - 버전관리\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c913ad68",
+   "id": "cfacf1ed",
    "metadata": {},
    "source": [
     "## 4.5. 내 코드의 모든 발자취를 기록할 수 있을까? (2) Git과 GitHub"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576c706c",
+   "id": "e70cb9be",
    "metadata": {},
    "source": [
     " - **Git** : 개발을 진행하며 작성하는 소스코드가 업데이트 되는 버전을 기록해두고 관리할 수 있는 소스코드 버전 관리 시스템\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd35ac7",
+   "id": "e898d47f",
    "metadata": {},
    "source": [
     "## 4.6. 내 코드의 모든 발자취를 기록할 수 있을까? (3) Git, GitHub 세팅하기\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa502611",
+   "id": "06e19206",
    "metadata": {},
    "source": [
     "## 4.7. GitHub에 첫번째 잔디 심기! 어렵지 않아요! (1) 로컬 저장소\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7290f56d",
+   "id": "e0876158",
    "metadata": {},
    "source": [
     "## 4.8. GitHub에 첫번째 잔디 심기! 어렵지 않아요! (2) 변화 추적하기\n",
@@ -251,7 +251,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "862acf40",
+   "id": "6886e009",
    "metadata": {},
    "source": [
     "## 4.9. GitHub에 첫번째 잔디 심기! 어렵지 않아요! (3) 원격 저장소\n",
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72deca9f",
+   "id": "3867b23b",
    "metadata": {},
    "source": [
     "## 4.10. GitHub에 첫번째 잔디 심기! 어렵지 않아요! (4) 협업하기\n",
@@ -368,13 +368,17 @@
     "\n",
     "`# cd project`\n",
     "\n",
+    "`# git clone https://github.com/xxx/first-repository.git`\n",
+    "\n",
+    " - `aiffel` 폴더 하위에 `project` 폴더를 만들고 거기에 `git clone` 했다.\n",
+    " - 그러면 해당 깃허브의 자료들이 모조리 `project`로 복사(clone)된다.\n",
     "\n",
     "### 차."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5ad97f63",
+   "id": "0cf7c637",
    "metadata": {},
    "source": [
     "## 4.11. GitHub에 첫번째 잔디 심기! 어렵지 않아요! (5) 받아오기"
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "656ea708",
+   "id": "b61a8075",
    "metadata": {},
    "source": [
     "## 4.12. GitHub에 첫번째 잔디 심기! 어렵지 않아요! (6) 정리"
@@ -390,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f07b601d",
+   "id": "4692846f",
    "metadata": {},
    "source": [
     "## 4.13. 개발자 문서작업의 시작과 끝! 마크다운을 익혀보자 (1) 마크다운 소개"
@@ -398,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a5a89b",
+   "id": "bacdd5a5",
    "metadata": {},
    "source": [
     "## 4.14. 개발자 문서작업의 시작과 끝! 마크다운을 익혀보자 (2) 마크다운 작성하기"
@@ -406,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577273b7",
+   "id": "3a2c8330",
    "metadata": {},
    "source": [
     "## 4.15. 마무리"
