--- a/004_article_and_materials/0901_평균과_산포도(+MSE_MAE)/0901_평균과_산포도(+MSE,RMSE,MAE).ipynb
+++ b/004_article_and_materials/0901_평균과_산포도(+MSE_MAE)/0901_평균과_산포도(+MSE,RMSE,MAE).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "659a317a",
+   "id": "393a35a5",
    "metadata": {},
    "source": [
     "이 글에서는 평균과 산포도, 그리고 MSE, RMSE, MAE에 대해 써보려 한다.\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "186cf99a",
+   "id": "c9631974",
    "metadata": {},
    "source": [
     "# 1. 대푯값과 평균"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7395062",
+   "id": "d42a8252",
    "metadata": {},
    "source": [
     "다섯 개의 숫자 $1,\\:2,\\:3,\\:4,\\:5\\tag{a}$\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84dc8c00",
+   "id": "9727cfac",
    "metadata": {},
    "source": [
     "|구분|변량        |평균|\n",
@@ -80,9 +80,8 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "fda5ac11",
+   "id": "0aaf5450",
    "metadata": {},
    "source": [
     "# 2. 산포도\n",
@@ -116,7 +115,7 @@
     "|편차|-2|-1|0|1|2|\n",
     "\n",
     "산포도란 \"변량들이 평균으로부터 얼마나 떨어져있는지\"를 평균적으로 계산한 값이다.\n",
-    "그러니까, 편차에 대해서 적당히 평균을 내면 그것이 산포도의 역할을 할 수 있을 것이다.\n",
+    "그러니까, 편차에 대해서 적당히 평균을 내면 그것이 산포도의 역할을 할 수 있을 것 같다.\n",
     "그런데 편차에 대하여 평균을 계산하면 0이 나온다.\n",
     "\n",
     "$$\\frac{(-2)+(-1)+0+1+2}5=0$$\n",
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0faee1c1",
+   "id": "652477b4",
    "metadata": {},
    "source": [
     "# 3. MSE, RMSE, MAE"
@@ -226,12 +225,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a52ed00",
+   "id": "527a0f81",
    "metadata": {},
    "source": [
     "## 3.1. MSE, RMSE, MAE\n",
     "회귀분석(Regression analysis)은, 관측된 데이터들에 대하여, 그 데이터들을 가장 잘 만족하게 하는 함수(모델)를 찾는 일을 말한다.\n",
-    "(이때 데이터란, 독립변수 $x$와 종속변수 $y$로 이루어진 순서쌍 $(x,y)$들의 집합이다.)\n",
+    "이때 데이터란, 독립변수 $x$와 종속변수 $y$로 이루어진 순서쌍 $(x,y)$들의 집합이다.\n",
     "즉 함수(모델)로 예측한 예측값($\\hat y_i$)이 관측값($y_i$)과 적게 차이나도록 함수(모델)을 구성하도록 한다.\n",
     "\n",
     "예측값($\\hat y_i$)과 관측값($\\hat y$) 사이의 차이를 오차(error)라고 하면, 이 오차는 데이터의 개수만큼 존재한다.\n",
@@ -263,7 +262,7 @@
     "특히 MSE는 대부분의 머신러닝 문제에서 cost function의 역할을 수행한다.\n",
     "\n",
     "## 3.2. 산포도와의 관계\n",
-    "MSE, RMSE, MAE의 정의를 보면, 분산, 표준편차, 평균절대편차의 정의와 상당히 유사하다는 것을 관찰할 수 있다.\n",
+    "MSE, RMSE, MAE의 정의를 보면, 각각 분산, 표준편차, 평균절대편차의 정의와 상당히 유사하다는 것을 관찰할 수 있다.\n",
     "실제로, MSE, RMSE, MAE의 정의에서 '오차'라는 말을 '편차'라는 말로 바꾸면, 정확하게 분산, 표준편차, 평균절대편차의 정의와 일치한다.\n",
     "\n",
     "## 3.3. L1, L2 norm / 정규화(Normalization)\n",
