--- a/004_article_and_materials/0901_평균과_산포도(+MSE_MAE)/0901_평균과_산포도(+MSE,RMSE,MAE).ipynb
+++ b/004_article_and_materials/0901_평균과_산포도(+MSE_MAE)/0901_평균과_산포도(+MSE,RMSE,MAE).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "393a35a5",
+   "id": "8ea6d8db",
    "metadata": {},
    "source": [
     "이 글에서는 평균과 산포도, 그리고 MSE, RMSE, MAE에 대해 써보려 한다.\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9631974",
+   "id": "2a7584ea",
    "metadata": {},
    "source": [
     "# 1. 대푯값과 평균"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d42a8252",
+   "id": "3b1de933",
    "metadata": {},
    "source": [
     "다섯 개의 숫자 $1,\\:2,\\:3,\\:4,\\:5\\tag{a}$\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9727cfac",
+   "id": "e1176a58",
    "metadata": {},
    "source": [
     "|구분|변량        |평균|\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aaf5450",
+   "id": "588b7c00",
    "metadata": {},
    "source": [
     "# 2. 산포도\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "652477b4",
+   "id": "887e5a3e",
    "metadata": {},
    "source": [
     "# 3. MSE, RMSE, MAE"
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "527a0f81",
+   "id": "42de778a",
    "metadata": {},
    "source": [
     "## 3.1. MSE, RMSE, MAE\n",
@@ -283,7 +283,7 @@
     "그러면 RMSE는 벡터 $\\epsilon$의 L2 norm과 관련이 있고, MAE는 벡터 $\\epsilon$의 L1 norm과 관련이 있을 것이다.\n",
     "정확하게는\n",
     "\n",
-    "$$RMSE = \\frac{||\\epsilon||_2}n$$\n",
+    "$$RMSE = \\frac{||\\epsilon||_2}{\\sqrt n}$$\n",
     "\n",
     "$$MAE = \\frac{||\\epsilon||_1}n$$\n",
     "\n",
