0907_0957_morning_commit_model_selection_metrics

--- a/004_article_and_materials/0906_model_selection_metrics.ipynb
+++ b/004_article_and_materials/0906_model_selection_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "938ca54b",
+   "id": "9c1b3a9b",
    "metadata": {},
    "source": [
     "Exploration SO3의 첫번째 노드를 공부했다.\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54555966",
+   "id": "ddc76693",
    "metadata": {},
    "source": [
     "# 1. Binary Metrics"
@@ -30,7 +30,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d73a4507",
+   "id": "85a114e3",
    "metadata": {},
    "source": [
     "먼저 낮에 찾은 위키피디아 그림자료이다.\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2722d0a1",
+   "id": "3091b77b",
    "metadata": {},
    "source": [
     "## 1.1. Confusion matrix"
@@ -55,7 +55,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ecf5bd23",
+   "id": "aa1de7f1",
    "metadata": {},
    "source": [
     "confusion matrix를 적을 때, 가로축과 세로축 중 어떤 걸 predicted class로 놓고, 어떤 걸 actual class로 놓을 지 하는 건 늘 고민이다.\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb5124b0",
+   "id": "20c7bff0",
    "metadata": {},
    "source": [
     "confusion matrix와 metrics라는 주제는 비단 머신러닝에 한정하여 말하게 되는 주제는 아니다.\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7daa236f",
+   "id": "32e5c869",
    "metadata": {},
    "source": [
     "**Q15. 오차 행렬에서는 예측 결과를 네 가지로 구분합니다. 각각은 무엇인가요?**\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca23aec",
+   "id": "fee57c8c",
    "metadata": {},
    "source": [
     "이 주제에 관해서는 지금까지 한 3-4번째 공부하는 것 같은데, 매번 배울때마다 헷갈렸다. 이제는 헷갈리지 않을 때가 되었다.\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250d608e",
+   "id": "28fdd696",
    "metadata": {},
    "source": [
     "## 1.2. Accuracy"
@@ -141,7 +141,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b7b9efc0",
+   "id": "ddfe0d4d",
    "metadata": {},
    "source": [
     "![0906_precision_and_recall_LMS_accuracy.png](attachment:0906_precision_and_recall_LMS_accuracy.png)\n",
@@ -159,7 +159,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "30d3f5e0",
+   "id": "b8ad1622",
    "metadata": {},
    "source": [
     "이러한 accuracy가 제 역할을 하지 못하는 경우는 다음의 예이다.\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3492010",
+   "id": "eb7f7748",
    "metadata": {},
    "source": [
     "## 1.3. Precision"
@@ -193,7 +193,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "93307342",
+   "id": "87f3fd71",
    "metadata": {},
    "source": [
     "recall과 precision 중 precision을 먼저 놓는 이유는, 원 출처인 [이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 글의 순서가 그렇기 때문이기도 하지만, 조금 다른 이유가 있다.\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49dd43f2",
+   "id": "5b985f17",
    "metadata": {},
    "source": [
     "## 1.4. Recall"
@@ -249,7 +249,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "020a961e",
+   "id": "6bd2a7b4",
    "metadata": {},
    "source": [
     "recall은 precision과 반대이다.\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3a5237f",
+   "id": "03515e2f",
    "metadata": {},
    "source": [
     "## 1.5. F1 score"
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48bf1a0a",
+   "id": "8c37b50f",
    "metadata": {},
    "source": [
     "F1 score를 이야기할 때 흔히 이야기하는 것은 precision과 recall 모두를 높게 만들기는 어려우니 일종의 trade-off를 할 수밖에 없다는 것이다.\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af54f5cc",
+   "id": "67d357f3",
    "metadata": {},
    "source": [
     "precision과 recall이 서로 배타적인 관계에 있다는 점을 차치하고라도, F1score는 다른 점에서 중요하다.\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c9b0189",
+   "id": "e6003126",
    "metadata": {},
    "source": [
     "즉, 두 값의 산술평균과 조화평균을 고려할 때, 조화평균이 조금 더 작다.\n",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172fc090",
+   "id": "c1bc8073",
    "metadata": {},
    "source": [
     "## 1.6. metric 선택하기"
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea49f36a",
+   "id": "36d0bd02",
    "metadata": {},
    "source": [
     "[이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 마지막에는 어떤 metric을 선택해야 할 지에 대해 나름대로 체계적으로 설명하고 있다.\n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1f68ad0",
+   "id": "da4650ca",
    "metadata": {},
    "source": [
     "metric을 선택해야 하는 세 개의 dataset은 다음과 같다.\n",
@@ -450,13 +450,13 @@
     "터치 펜으로 화면 상에 비밀번호를 입력했을 때, 우리의 알고리즘은 그 손글씨를 숫자로 해독할 수 있어야 한다.\n",
     "이럴 때에, 발생하지 않아야 하는 치명적인 일은, 글씨를 잘못썼는데도 불구하고 입력이 되는 것이다.\n",
     "예를 들어, 실제 비밀번호가 3이라고 가정하자.\n",
-    "비밀번호를 3이 아닌 다른 것으로 잘못 적었는데도 불구하고(predicted positive) 우리의 알고리즘이 그것을 3으로 인식하면, 보안이 뚫린다. 그러면 곤란하다.\n",
+    "비밀번호를 3이 아닌 다른 것으로 잘못 적었는데도 불구하고(actual negative) 우리의 알고리즘이 그것을 3으로 인식하면(predicted positive) 보안이 뚫린다. 그러면 곤란하다.\n",
     "즉, FP인 경우를 미연에 방지해야 하고, 따라서 precision을 사용해야 한다."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "476b77f1",
+   "id": "2d2687bb",
    "metadata": {},
    "source": [
     "# 2. Multiclass Metrics"
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d47d0c",
+   "id": "1c465067",
    "metadata": {},
    "source": [
     "[그 다음 글](https://towardsdatascience.com/multi-class-metrics-made-simple-part-ii-the-f1-score-ebe8b2c2ca1)"
