--- a/004_article_and_materials/0902_bollinger_bands_of_LULU.ipynb
+++ b/004_article_and_materials/0902_bollinger_bands_of_LULU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e546673",
+   "id": "2b7248db",
    "metadata": {},
    "source": [
     "이 글에서는 LULU(Lululemon Atheletica Inc.)라는 주식 자료를 시각화해보고, 그에 대해서 해석해보았다. 특히 해당 주식 추세선의 bollanger band를 그려보려고 하였다.\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92d079a0",
+   "id": "3529f929",
    "metadata": {},
    "outputs": [
     {
@@ -44,14 +44,13 @@
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
     "import time\n",
-    "import yfinance as yahoo_finance\n",
+    "import yfinance\n",
     "%matplotlib inline"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "4ee51f88",
+   "id": "e8629550",
    "metadata": {},
    "source": [
     " - Cell 1\n",
@@ -82,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "00dc0ef4",
+   "id": "ead38a44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b16c128b",
+   "id": "eda3acaa",
    "metadata": {},
    "source": [
     " - cell 2\n",
@@ -116,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e901d217",
+   "id": "8c58c081",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "625c9a52",
+   "id": "e1dc114c",
    "metadata": {},
    "source": [
     " - cell 3  \n",
@@ -255,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7cb7bd78",
+   "id": "ff21ff50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81d86ee8",
+   "id": "f192c466",
    "metadata": {},
    "source": [
     " - cell 4  \n",
@@ -302,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cdb90b32",
+   "id": "11e10c33",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9754c269",
+   "id": "81064d92",
    "metadata": {},
    "source": [
     " - cell 5  \n",
@@ -821,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d5d2e770",
+   "id": "da3649a0",
    "metadata": {},
    "outputs": [
     {
