--- a/004_article_and_materials/0906_evaluation_metrics.ipynb
+++ b/004_article_and_materials/0906_evaluation_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c1b3a9b",
+   "id": "0c575eb4",
    "metadata": {},
    "source": [
     "Exploration SO3의 첫번째 노드를 공부했다.\n",
@@ -17,7 +17,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddc76693",
+   "id": "922c1e39",
+   "metadata": {},
+   "source": [
+    "목차\n",
+    "\n",
+    "1. binary metrics\n",
+    "  \n",
+    "  1.1. confusion matrix\n",
+    "  \n",
+    "  1.2. accuracy\n",
+    "  \n",
+    "  1.3. precision\n",
+    "  \n",
+    "  1.4. recall\n",
+    "  \n",
+    "  1.5. F1 score\n",
+    "  \n",
+    "  1.6. binary metric 선택하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5630c6af",
    "metadata": {},
    "source": [
     "# 1. Binary Metrics"
@@ -30,7 +52,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "85a114e3",
+   "id": "3ab407fe",
    "metadata": {},
    "source": [
     "먼저 낮에 찾은 위키피디아 그림자료이다.\n",
@@ -42,10 +64,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3091b77b",
+   "id": "cedcb1fb",
    "metadata": {},
    "source": [
-    "## 1.1. Confusion matrix"
+    "## 1.1. confusion matrix"
    ]
   },
   {
@@ -55,7 +77,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "aa1de7f1",
+   "id": "0e58f50c",
    "metadata": {},
    "source": [
     "confusion matrix를 적을 때, 가로축과 세로축 중 어떤 걸 predicted class로 놓고, 어떤 걸 actual class로 놓을 지 하는 건 늘 고민이다.\n",
@@ -68,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c7bff0",
+   "id": "c9e77cff",
    "metadata": {},
    "source": [
     "confusion matrix와 metrics라는 주제는 비단 머신러닝에 한정하여 말하게 되는 주제는 아니다.\n",
@@ -82,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e5c869",
+   "id": "e274308f",
    "metadata": {},
    "source": [
     "**Q15. 오차 행렬에서는 예측 결과를 네 가지로 구분합니다. 각각은 무엇인가요?**\n",
@@ -102,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee57c8c",
+   "id": "578183aa",
    "metadata": {},
    "source": [
     "이 주제에 관해서는 지금까지 한 3-4번째 공부하는 것 같은데, 매번 배울때마다 헷갈렸다. 이제는 헷갈리지 않을 때가 되었다.\n",
@@ -128,10 +150,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28fdd696",
+   "id": "b3339e3e",
    "metadata": {},
    "source": [
-    "## 1.2. Accuracy"
+    "## 1.2. accuracy"
    ]
   },
   {
@@ -141,7 +163,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ddfe0d4d",
+   "id": "c05c75ec",
    "metadata": {},
    "source": [
     "![0906_precision_and_recall_LMS_accuracy.png](attachment:0906_precision_and_recall_LMS_accuracy.png)\n",
@@ -159,7 +181,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b8ad1622",
+   "id": "6cf784b2",
    "metadata": {},
    "source": [
     "이러한 accuracy가 제 역할을 하지 못하는 경우는 다음의 예이다.\n",
@@ -180,10 +202,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb7f7748",
+   "id": "44cab519",
    "metadata": {},
    "source": [
-    "## 1.3. Precision"
+    "## 1.3. precision"
    ]
   },
   {
@@ -193,7 +215,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "87f3fd71",
+   "id": "4bc9b5f8",
    "metadata": {},
    "source": [
     "recall과 precision 중 precision을 먼저 놓는 이유는, 원 출처인 [이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 글의 순서가 그렇기 때문이기도 하지만, 조금 다른 이유가 있다.\n",
@@ -236,10 +258,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b985f17",
+   "id": "2e24c59d",
    "metadata": {},
    "source": [
-    "## 1.4. Recall"
+    "## 1.4. recall"
    ]
   },
   {
@@ -249,7 +271,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6bd2a7b4",
+   "id": "84b31766",
    "metadata": {},
    "source": [
     "recall은 precision과 반대이다.\n",
@@ -295,7 +317,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03515e2f",
+   "id": "f669170b",
+   "metadata": {},
+   "source": [
+    "위의 예시들을 통해서 보면, (아무리 preference라는 게 없다고 하더라도) 직관적으로 precision과 recall은 다음과 같은 의미라고 생각하면 될 것 같다.\n",
+    " - precision : 어떤 정확한 작업을 하고 싶을 때, 사용한다.\n",
+    "     - 유튜브 알고리즘이 내 취향에 맞는 비디오만 추천해줬으면 좋겠다.\n",
+    "     - 스팸필터가 스팸메일만 정확하게 구분했으며 좋겠다. (중요한 메일이 스팸메일함에 가지 않았으면 좋겠다.)\n",
+    " - recall : 잘못될 수 있는 일을 방지하고 싶을 때, 보수적으로 행동하기 위해 사용한다.\n",
+    "     - 전염병이 있는데도 전염병이 없는 것으로 진단하지 말았으면 좋겠다.\n",
+    "     - 부정거래가 있는데도 부정거래가 없는 것으로 판단하지 않았으면 좋겠다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c211f9e0",
    "metadata": {},
    "source": [
     "## 1.5. F1 score"
@@ -303,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c37b50f",
+   "id": "617ba211",
    "metadata": {},
    "source": [
     "F1 score를 이야기할 때 흔히 이야기하는 것은 precision과 recall 모두를 높게 만들기는 어려우니 일종의 trade-off를 할 수밖에 없다는 것이다.\n",
@@ -339,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67d357f3",
+   "id": "ab3f947d",
    "metadata": {},
    "source": [
     "precision과 recall이 서로 배타적인 관계에 있다는 점을 차치하고라도, F1score는 다른 점에서 중요하다.\n",
@@ -357,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6003126",
+   "id": "abc56a26",
    "metadata": {},
    "source": [
     "즉, 두 값의 산술평균과 조화평균을 고려할 때, 조화평균이 조금 더 작다.\n",
@@ -397,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1bc8073",
+   "id": "8ec29f27",
    "metadata": {},
    "source": [
     "## 1.6. metric 선택하기"
@@ -405,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d0bd02",
+   "id": "6a4cc164",
    "metadata": {},
    "source": [
     "[이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 마지막에는 어떤 metric을 선택해야 할 지에 대해 나름대로 체계적으로 설명하고 있다.\n",
@@ -431,10 +467,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da4650ca",
+   "id": "138caf0d",
    "metadata": {},
    "source": [
-    "metric을 선택해야 하는 세 개의 dataset은 다음과 같다.\n",
+    "이번 첫번째 프로젝트에서 metric을 선택해야 하는 세 개의 dataset은 다음과 같다.\n",
     "1. `digits` dataset\n",
     "2. `wine` dataset\n",
     "3. `breast_cancer` dataset\n",
@@ -446,17 +482,41 @@
     "그러자면, recall을 고려해야 한다.\n",
     "\n",
     "이 글을 쓰기 전에, 아까 산책을 하다가 나름대로의 답을 생각해냈었던 것은 1번이다.\n",
-    "`digit` classification을 하는 목적을 생각해보았다.\n",
+    "`digits` classification을 하는 목적을 생각해보았다.\n",
     "터치 펜으로 화면 상에 비밀번호를 입력했을 때, 우리의 알고리즘은 그 손글씨를 숫자로 해독할 수 있어야 한다.\n",
-    "이럴 때에, 발생하지 않아야 하는 치명적인 일은, 글씨를 잘못썼는데도 불구하고 입력이 되는 것이다.\n",
+    "이럴 때에, 발생하지 않아야 하는 치명적인 일은, 글씨를 잘못썼는데도 불구하고 통과되는 것이다.\n",
     "예를 들어, 실제 비밀번호가 3이라고 가정하자.\n",
     "비밀번호를 3이 아닌 다른 것으로 잘못 적었는데도 불구하고(actual negative) 우리의 알고리즘이 그것을 3으로 인식하면(predicted positive) 보안이 뚫린다. 그러면 곤란하다.\n",
-    "즉, FP인 경우를 미연에 방지해야 하고, 따라서 precision을 사용해야 한다."
+    "즉, FP인 경우를 미연에 방지해야 하고, 따라서 precision을 사용해야 한다.\n",
+    "\n",
+    "덧붙여서 말하자면, `digits` classification에서 FN는 큰 위험을 동반하지 않는다.\n",
+    "여기에서 FN란, 3이라고 제대로 적었는데도 불구하고(actual positive), 알고리즘이 그것을 3으로 인식하지 못하는(predicted negative) 경우이다.\n",
+    "물론 이런 FN의 경우가 많아진다면, 짜증은 나겠지만, 보안의 관점에서 보면 FN보다는 FP가 더 큰 위험을 초래할 수 있으므로, precision을 사용하는 게 맞을 것이다.\n",
+    "만약, 보안도 신경쓰지만 짜증도 좀 덜나게 하고 싶다면 F1 score를 쓰든지, 아니면 precision과 recall의 적당한 weighted average(weighted arithmetic average보다는 weighted harmonic average)를 취해서 사용할 수도 있을 것이다."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d2687bb",
+   "id": "3d0c1664",
+   "metadata": {},
+   "source": [
+    "위의 두 예시를 추가하여, 아까 정리해두었던 것을 다시 써보면 다음과 같다. (파란 색으로 표시했다. 유방암의 경우, 기존의 전염병의 예와 유사하지만 그냥 적었다.)\n",
+    " - precision : 어떤 정확한 작업을 하고 싶을 때, 사용한다.\n",
+    "     - 유튜브 알고리즘이 내 취향에 맞는 비디오만 추천해줬으면 좋겠다.\n",
+    "     - 스팸필터가 스팸메일만 정확하게 구분했으며 좋겠다. (중요한 메일이 스팸메일함에 가지 않았으면 좋겠다.)\n",
+    "     - <font color = blue>정확하게 3이라고 쓴 것만 3으로 추정했으면 좋겠다.</font>\n",
+    " - recall : 잘못될 수 있는 일을 방지하고 싶을 때, 보수적으로 행동하기 위해 사용한다.\n",
+    "     - 전염병이 있는데도 전염병이 없는 것으로 진단하지 말았으면 좋겠다.  \n",
+    "     → 전염병이라고 판단한 것만 전염병이었으면 좋겠다.\n",
+    "     - 부정거래가 있는데도 부정거래가 없는 것으로 판단하지 않았으면 좋겠다.  \n",
+    "     → 부정거래라고 판단한 것만 부정거래이었으면 좋겠다.\n",
+    "     - <font color = blue>암이 있는데도 암이 없는 것으로 진단하지 말았으면 좋겠다.</font>  \n",
+    "     → 암이라고 판단한 것만 암이었으면 좋겠다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ec67891",
    "metadata": {},
    "source": [
     "# 2. Multiclass Metrics"
@@ -464,10 +524,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c465067",
+   "id": "d02e86d5",
    "metadata": {},
    "source": [
-    "[그 다음 글](https://towardsdatascience.com/multi-class-metrics-made-simple-part-ii-the-f1-score-ebe8b2c2ca1)"
+    "binary classification이 아니라 multiclass classification으로 가면, 상황이 조금 복잡해진다.\n",
+    "유명한 `sklearn`의 붓꽃(`iris`) 예제를 보자.\n",
+    "(이 코드는 LMS fundamental SO3, 1.7에서 가져왔고 조금 변형했다.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "966d1f47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00         7\n",
+      "           1       0.83      0.83      0.83        12\n",
+      "           2       0.82      0.82      0.82        11\n",
+      "\n",
+      "    accuracy                           0.87        30\n",
+      "   macro avg       0.88      0.88      0.88        30\n",
+      "weighted avg       0.87      0.87      0.87        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "iris = load_iris()\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(iris.data, \n",
+    "                                                    iris.target, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=7)\n",
+    "\n",
+    "decision_tree = RandomForestClassifier(random_state=32)\n",
+    "decision_tree.fit(X_train, y_train)\n",
+    "y_pred = decision_tree.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a382b954",
+   "metadata": {},
+   "source": [
+    "이때 target은 두 개가 아니라 세 개이다.\n",
+    "전체 150개의 데이터 중 120개는 training set으로, 30개는 test set으로 분류된다.\n",
+    "feature의 개수는 4개여서 입력값들은 각각 4차원의 벡터이고, 출력값은 $\\{0,1,2\\}$의 원소이다.\n",
+    "`decision_tree`라는 모델에 training set (`X_train`과 `X_test`) 가지고 학습(`.fit`)했고,\n",
+    "학습이 끝나자 이번에는 `X_test`를 입력값으로 넣어 결과값을 예측(`y_pred`)했다.\n",
+    "그리고 실제 라벨(`y_test`)과 예측값 (`y_pred`)을 비교해 성능을 측정했다.\n",
+    "\n",
+    "성능을 측정하라고 명령(`classification_report(y_test, y_pred)`)하니 다양한 metric들이 주르륵 나열된다.\n",
+    "여기에서는 metric들에 적어보려고 하는데 아까 참고했던 글의 [그 다음 글](https://towardsdatascience.com/multi-class-metrics-made-simple-part-ii-the-f1-score-ebe8b2c2ca1)과 [마지막글](https://towardsdatascience.com/multi-class-metrics-made-simple-the-kappa-score-aka-cohens-kappa-coefficient-bdea137af09c)을 참고했다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85421a4b",
+   "metadata": {},
+   "source": [
+    "지금 글을 쓸 때 한가지 문제는, 아까와는 가로 세로가 반대로 바뀐다는 점이다.\n",
+    "그렇게 하면 헷갈리기는 하지만, 그래도 아까(사실은 어제) precision, FP, recall, FN의 개념을 다 외워놨기 때문에 문제가 없다고 가정하겠다.\n",
+    "아까 언급한 아까 언급한 [다른 글](https://towardsdatascience.com/multi-class-metrics-made-simple-part-i-precision-and-recall-9250280bddc2)을 포함하여, 지금 참고하고 있는 [그 다음 글](https://towardsdatascience.com/multi-class-metrics-made-simple-part-ii-the-f1-score-ebe8b2c2ca1)과 [마지막글](https://towardsdatascience.com/multi-class-metrics-made-simple-the-kappa-score-aka-cohens-kappa-coefficient-bdea137af09c)은 가로-세로가 기존과 바뀐다.\n",
+    "그런데 여기 있는 그림들이 너무 깔끔해서 이걸 버릴 수가 없다.\n",
+    "그러니까 그냥 쓰겠다."
    ]
   }
  ],
