--- a/004_article_and_materials/0906_evaluation_metrics.ipynb
+++ b/004_article_and_materials/0906_evaluation_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c575eb4",
+   "id": "fe0f7fd8",
    "metadata": {},
    "source": [
     "Exploration SO3의 첫번째 노드를 공부했다.\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "922c1e39",
+   "id": "2f29f61a",
    "metadata": {},
    "source": [
     "목차\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5630c6af",
+   "id": "6a7de48a",
    "metadata": {},
    "source": [
     "# 1. Binary Metrics"
@@ -52,7 +52,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "3ab407fe",
+   "id": "53189198",
    "metadata": {},
    "source": [
     "먼저 낮에 찾은 위키피디아 그림자료이다.\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cedcb1fb",
+   "id": "4d7edafb",
    "metadata": {},
    "source": [
     "## 1.1. confusion matrix"
@@ -77,11 +77,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0e58f50c",
+   "id": "65994034",
    "metadata": {},
    "source": [
     "confusion matrix를 적을 때, 가로축과 세로축 중 어떤 걸 predicted class로 놓고, 어떤 걸 actual class로 놓을 지 하는 건 늘 고민이다.\n",
-    "위의 두 글만 해도 서로 다르게 적고 있다.\n",
+    "위의 글들만 해도 서로 다르게 적고 있다.\n",
     "하지만, 나는 LMS에 나온대로 표현하겠다.\n",
     "아래는 LMS의 그림이다.\n",
     "\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e77cff",
+   "id": "fd1e2771",
    "metadata": {},
    "source": [
     "confusion matrix와 metrics라는 주제는 비단 머신러닝에 한정하여 말하게 되는 주제는 아니다.\n",
@@ -104,27 +104,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e274308f",
+   "id": "4cbe5c73",
    "metadata": {},
    "source": [
-    "**Q15. 오차 행렬에서는 예측 결과를 네 가지로 구분합니다. 각각은 무엇인가요?**\n",
-    "\n",
-    "confusion matrix에서는 두 개의 클래스 (그렇다, 아니다) / (양성이다, 음성이다) / (Positive, Negative) / (스팸메일이다, 아니다)를 상정해놓고 시작합니다.\n",
+    ">**Q15. 오차 행렬에서는 예측 결과를 네 가지로 구분합니다. 각각은 무엇인가요?**\n",
+    ">\n",
+    ">confusion matrix에서는 두 개의 클래스 (그렇다, 아니다) / (양성이다, 음성이다) / (Positive, Negative) / (스팸메일이다, 아니다)를 상정해놓고 시작합니다.\n",
     "실제 데이터의 값이 어느 클래스에 속하는지(Positive, Negative)와 예측결과가 어느 클래스에 속하는지(Positive, Negative)에 따라서 전체 데이터는 네 가지로 나뉩니다.\n",
     "이때, 실제 데이터의 값이 예측결과와 같은 클래스에 속하면 참(True)이고 다른 클래스에 속하면 거짓(False)로 이름붙입니다.\n",
-    "\n",
-    "아래에서 각각의 네 경우에 대하여 세 개의 문자는 각각 - 실제(positive, negative) / 예측(positive, negative) / 진위(true, false)를 나타내겠습니다.\n",
-    "1. True Positive : P / P / T,\n",
-    "2. False Negative : P / N / F,\n",
-    "3. True Negative : N / N / T,\n",
-    "4. False Positive : N / P / F\n",
-    "\n",
-    "예를 들어, False Nagative에서 뒤의 Nagative는 예측값을 Nagative로 예측했다는 것이고, 앞의 False는 실제값과 예측값이 다르다는 것입니다. 따라서 실제값은 Positive 입니다."
+    ">\n",
+    ">아래에서 각각의 네 경우에 대하여 세 개의 문자는 각각 - 실제(positive, negative) / 예측(positive, negative) / 진위(true, false)를 나타내겠습니다.\n",
+    ">1. True Positive : P / P / T,\n",
+    ">2. False Negative : P / N / F,\n",
+    ">3. True Negative : N / N / T,\n",
+    ">4. False Positive : N / P / F\n",
+    ">\n",
+    ">예를 들어, False Nagative에서 뒤의 Nagative는 예측값을 Nagative로 예측했다는 것이고, 앞의 False는 실제값과 예측값이 다르다는 것입니다. 따라서 실제값은 Positive 입니다."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "578183aa",
+   "id": "0e10f17a",
    "metadata": {},
    "source": [
     "이 주제에 관해서는 지금까지 한 3-4번째 공부하는 것 같은데, 매번 배울때마다 헷갈렸다. 이제는 헷갈리지 않을 때가 되었다.\n",
@@ -140,8 +140,8 @@
     "|False Negative |N     |N        |T|\n",
     "\n",
     "이다.\n",
-    "(써놓고 보니 또 헷갈리는 것 같은데 기분탓이다.\n",
-    "하지만, 정신을 차리고 보면) False Negative에서 뒤에 붙는 Negative는 predicted negative를 뜻한다.\n",
+    "써놓고 보니 또 헷갈리는 것 같은데 기분탓이다.\n",
+    "하지만, 정신을 차리고 보면 False Negative에서 뒤에 붙는 Negative는 predicted negative를 뜻한다.\n",
     "False는 actual과 predicted가 일치하지 않는다는 뜻이니, actual positive가 된다.\n",
     "이렇게 한 번 생각해놓으니, 시간은 좀 걸려도 헷갈리지는 않게 되었다.\n",
     "\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3339e3e",
+   "id": "0d67afd5",
    "metadata": {},
    "source": [
     "## 1.2. accuracy"
@@ -163,7 +163,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c05c75ec",
+   "id": "57ee193c",
    "metadata": {},
    "source": [
     "![0906_precision_and_recall_LMS_accuracy.png](attachment:0906_precision_and_recall_LMS_accuracy.png)\n",
@@ -181,7 +181,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6cf784b2",
+   "id": "f84a3657",
    "metadata": {},
    "source": [
     "이러한 accuracy가 제 역할을 하지 못하는 경우는 다음의 예이다.\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44cab519",
+   "id": "de636753",
    "metadata": {},
    "source": [
     "## 1.3. precision"
@@ -215,7 +215,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4bc9b5f8",
+   "id": "d77428e9",
    "metadata": {},
    "source": [
     "recall과 precision 중 precision을 먼저 놓는 이유는, 원 출처인 [이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 글의 순서가 그렇기 때문이기도 하지만, 조금 다른 이유가 있다.\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e24c59d",
+   "id": "184cda93",
    "metadata": {},
    "source": [
     "## 1.4. recall"
@@ -271,7 +271,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "84b31766",
+   "id": "61903aa4",
    "metadata": {},
    "source": [
     "recall은 precision과 반대이다.\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f669170b",
+   "id": "3c0d778c",
    "metadata": {},
    "source": [
     "위의 예시들을 통해서 보면, (아무리 preference라는 게 없다고 하더라도) 직관적으로 precision과 recall은 다음과 같은 의미라고 생각하면 될 것 같다.\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c211f9e0",
+   "id": "76f61e5a",
    "metadata": {},
    "source": [
     "## 1.5. F1 score"
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617ba211",
+   "id": "296b91fe",
    "metadata": {},
    "source": [
     "F1 score를 이야기할 때 흔히 이야기하는 것은 precision과 recall 모두를 높게 만들기는 어려우니 일종의 trade-off를 할 수밖에 없다는 것이다.\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab3f947d",
+   "id": "12d89f12",
    "metadata": {},
    "source": [
     "precision과 recall이 서로 배타적인 관계에 있다는 점을 차치하고라도, F1score는 다른 점에서 중요하다.\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc56a26",
+   "id": "91ff8445",
    "metadata": {},
    "source": [
     "즉, 두 값의 산술평균과 조화평균을 고려할 때, 조화평균이 조금 더 작다.\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec29f27",
+   "id": "2412155f",
    "metadata": {},
    "source": [
     "## 1.6. metric 선택하기"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4cc164",
+   "id": "0129cf04",
    "metadata": {},
    "source": [
     "[이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 마지막에는 어떤 metric을 선택해야 할 지에 대해 나름대로 체계적으로 설명하고 있다.\n",
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "138caf0d",
+   "id": "e15ebfb9",
    "metadata": {},
    "source": [
     "이번 첫번째 프로젝트에서 metric을 선택해야 하는 세 개의 dataset은 다음과 같다.\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d0c1664",
+   "id": "320efa5c",
    "metadata": {},
    "source": [
     "위의 두 예시를 추가하여, 아까 정리해두었던 것을 다시 써보면 다음과 같다. (파란 색으로 표시했다. 유방암의 경우, 기존의 전염병의 예와 유사하지만 그냥 적었다.)\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec67891",
+   "id": "e36cab87",
    "metadata": {},
    "source": [
     "# 2. Multiclass Metrics"
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d02e86d5",
+   "id": "46653d47",
    "metadata": {},
    "source": [
     "binary classification이 아니라 multiclass classification으로 가면, 상황이 조금 복잡해진다.\n",
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "966d1f47",
+   "id": "31a8171d",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a382b954",
+   "id": "71c24d7b",
    "metadata": {},
    "source": [
     "이때 target은 두 개가 아니라 세 개이다.\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85421a4b",
+   "id": "d763eca4",
    "metadata": {},
    "source": [
     "지금 글을 쓸 때 한가지 문제는, 아까와는 가로 세로가 반대로 바뀐다는 점이다.\n",
