--- a/004_articles_and_materials/0906_evaluation_metrics.ipynb
+++ b/004_articles_and_materials/0906_evaluation_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be212d7c",
+   "id": "8c8f8a84",
    "metadata": {},
    "source": [
     "Exploration SO3의 첫번째 노드를 공부했다.\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a20b204",
+   "id": "7014f721",
    "metadata": {},
    "source": [
     "목차\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c7d7dd",
+   "id": "c6cb0e3b",
    "metadata": {},
    "source": [
     "# 1. Binary Metrics"
@@ -65,7 +65,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "85f31167",
+   "id": "e2d4562f",
    "metadata": {},
    "source": [
     "먼저 낮에 찾은 위키피디아 그림자료이다.\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71035335",
+   "id": "a14a74db",
    "metadata": {},
    "source": [
     "## 1.1. confusion matrix"
@@ -90,7 +90,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7be78ccd",
+   "id": "0553df33",
    "metadata": {},
    "source": [
     "confusion matrix를 적을 때, 가로축과 세로축 중 어떤 걸 predicted class로 놓고, 어떤 걸 actual class로 놓을 지 하는 건 늘 고민이다.\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e5d039",
+   "id": "4e3ba38d",
    "metadata": {},
    "source": [
     "confusion matrix와 metrics라는 주제는 비단 머신러닝에 한정하여 말하게 되는 주제는 아니다.\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c18428",
+   "id": "b634c200",
    "metadata": {},
    "source": [
     ">**Q15. 오차 행렬에서는 예측 결과를 네 가지로 구분합니다. 각각은 무엇인가요?**\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c0b2f78",
+   "id": "7efac9c5",
    "metadata": {},
    "source": [
     "이 주제에 관해서는 지금까지 한 3-4번째 공부하는 것 같은데, 매번 배울때마다 헷갈렸다. 이제는 헷갈리지 않을 때가 되었다.\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f8b7590",
+   "id": "95170e6c",
    "metadata": {},
    "source": [
     "## 1.2. accuracy"
@@ -176,7 +176,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f7fe38fc",
+   "id": "764fb6ca",
    "metadata": {},
    "source": [
     "![0906_precision_and_recall_LMS_accuracy.png](attachment:0906_precision_and_recall_LMS_accuracy.png)\n",
@@ -194,7 +194,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6ee6fddf",
+   "id": "cc938aae",
    "metadata": {},
    "source": [
     "이러한 accuracy가 제 역할을 하지 못하는 경우는 다음의 예이다.\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5812625",
+   "id": "a14c6664",
    "metadata": {},
    "source": [
     "## 1.3. precision"
@@ -228,7 +228,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c599c4b9",
+   "id": "b0e0c714",
    "metadata": {},
    "source": [
     "recall과 precision 중 precision을 먼저 놓는 이유는, 원 출처인 [이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 글의 순서가 그렇기 때문이기도 하지만, 조금 다른 이유가 있다.\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "896fe8c9",
+   "id": "dbce2fe4",
    "metadata": {},
    "source": [
     "## 1.4. recall"
@@ -284,7 +284,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7d7ac246",
+   "id": "36763e6d",
    "metadata": {},
    "source": [
     "recall은 precision과 반대이다.\n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "253e9a89",
+   "id": "f32c3ef5",
    "metadata": {},
    "source": [
     "위의 예시들을 통해서 보면, (아무리 preference라는 게 없다고 하더라도) 직관적으로 precision과 recall은 다음과 같은 의미라고 생각하면 될 것 같다.\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a29d5fb",
+   "id": "8bb2d77d",
    "metadata": {},
    "source": [
     "## 1.5. F1 score"
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a97557d",
+   "id": "665c4b65",
    "metadata": {},
    "source": [
     "F1 score를 이야기할 때 흔히 이야기하는 것은 precision과 recall 모두를 높게 만들기는 어려우니 일종의 trade-off를 할 수밖에 없다는 것이다.\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a9019a",
+   "id": "12dc4074",
    "metadata": {},
    "source": [
     "precision과 recall이 서로 배타적인 관계에 있다는 점을 차치하고라도, F1score는 다른 점에서 중요하다.\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8183804f",
+   "id": "5f8208a8",
    "metadata": {},
    "source": [
     "즉, 두 값의 산술평균과 조화평균을 고려할 때, 조화평균이 조금 더 작다.\n",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f3ec62c",
+   "id": "67e23c89",
    "metadata": {},
    "source": [
     "## 1.6. metric 선택하기"
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77656301",
+   "id": "95c8ebcf",
    "metadata": {},
    "source": [
     "[이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 마지막에는 어떤 metric을 선택해야 할 지에 대해 나름대로 체계적으로 설명하고 있다.\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b1750a",
+   "id": "8cb66b52",
    "metadata": {},
    "source": [
     "이번 첫번째 프로젝트에서 metric을 선택해야 하는 세 개의 dataset은 다음과 같다.\n",
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5542db",
+   "id": "0d6bcefa",
    "metadata": {},
    "source": [
     "위의 두 예시를 추가하여, 아까 정리해두었던 것을 다시 써보면 다음과 같다. (파란 색으로 표시했다. 유방암의 경우, 기존의 전염병의 예와 유사하지만 그냥 적었다.)\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8756e714",
+   "id": "d49ba628",
    "metadata": {},
    "source": [
     "# 2. Multiclass Metrics"
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372a6d7c",
+   "id": "470a9518",
    "metadata": {},
    "source": [
     "binary classification이 아니라 multiclass classification으로 가면, 상황이 조금 복잡해진다.\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4131c0a2",
+   "id": "68a2c60f",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6efc1c39",
+   "id": "cd28526c",
    "metadata": {},
    "source": [
     "이때 target은 두 개가 아니라 세 개이다.\n",
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b4f31b7",
+   "id": "2c318ef8",
    "metadata": {},
    "source": [
     "지금 글을 쓸 때 한가지 문제는, 아까와는 가로 세로가 반대로 바뀐다는 점이다.\n",
@@ -623,7 +623,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "29967388",
+   "id": "0ef02f7e",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514f60ff",
+   "id": "f64e4aaf",
    "metadata": {},
    "source": [
     "이 그림이다.\n",
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e5d6d98",
+   "id": "90d68fa9",
    "metadata": {},
    "source": [
     "## 2.1. accuracy"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "251cad8c",
+   "id": "7bf263fb",
    "metadata": {},
    "source": [
     "accuracy는 이진분류에서 사용했지만, 다중분류에서도 당연히 사용할 수 있다.\n",
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c279f40d",
+   "id": "22c61f05",
    "metadata": {},
    "source": [
     "## 2.2. macro metrics"
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b341a1b",
+   "id": "1838a3ae",
    "metadata": {},
    "source": [
     "지금 multiclass classification을 다루고 있기는 하지만, binary classification에서 썼던 metric들을 가져와서 생각해볼 수도 있다.\n",
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d58733",
+   "id": "2aa08d5f",
    "metadata": {},
    "source": [
     "\\begin{align*}\n",
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434102f1",
+   "id": "c1b8ff76",
    "metadata": {},
    "source": [
     "## 2.3. weighted metrics"
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98168cd9",
+   "id": "d0964f9d",
    "metadata": {},
    "source": [
     "위에서 macro metric들을 정의할 때에, 각 class별 metric에 평균을 취하였다.\n",
@@ -791,7 +791,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "aaa01544",
+   "id": "85d74519",
    "metadata": {},
    "source": [
     "![image-2.png](attachment:image-2.png)\n",
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "facb1c90",
+   "id": "e34fd255",
    "metadata": {},
    "source": [
     "\\begin{align*}\n",
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "508a0eea",
+   "id": "a9a9d9c8",
    "metadata": {},
    "source": [
     "macro-precision은 macro-precision(cat), macro-precision(fish), macro-precision(hen)을 단순히 산술평균하여 계산했었다.\n",
@@ -849,10 +849,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea280a90",
+   "id": "3e1e41ff",
    "metadata": {},
    "source": [
     "## 2.4. Cohen's kappa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8038aeca",
+   "metadata": {},
+   "source": [
+    "맨 처음 소개한 accuracy(2.1.)는 multiclass classification에서  모델의 성능을 평가하는 데 있어서의 가장 기본적인 evluation metric이었다.\n",
+    "그런데 accuracy는 "
    ]
   }
  ],
